fix: chrome scrollbar issue

--- a/src/main/webapp/src/assets/main.scss
+++ b/src/main/webapp/src/assets/main.scss
@@ -21,7 +21,6 @@
 
 .app-container {
   height: 100vh;
-  width: 100vw;
   overflow: hidden;
 }
 
